package es.ujaen.dae.clubSocios.entidades;

public class Actividad {
    public String getId() {
        return "";
    }
}
