package es.ujaen.dae.clubSocios.enums;

public enum EstadoActividad {
    ABIERTA,
    CERRADA,
    EN_CURSO,
    FINALIZADA
}
