package es.ujaen.dae.clubSocios.enums;

public enum EstadoCuota {
    PAGADA,
    PENDIENTE;
}