package es.ujaen.dae.clubSocios.enums;

public enum EstadoSolicitud {
    PENDIENTE,
    CONFIRMADA,
    CANCELADA;
}
