package es.ujaen.dae.clubSocios.servicios;

public class ServicioClub {
}
